"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-10-19	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-07:
	  No source revision.
	  Re-factored bitrouter test cases to make it trivial to 
		change the environment for future sensitivity tests.  


2007-10-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-06:
	  No source revision.
	  Another batch of bitrouter tests with more interesting input pattern.


2007-10-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-05:
	  Scheme functions edited, see scm/ChangeLog.  
	  More bitrouter tests...


2007-10-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-04:
	  No source revision, more bit-router tests with
		lengthened packet separation.
	  Next: vary packet length


	* HACKT-00-01-04-main-00-81-85-router-01-03:
	  No source revision, more bit-router tests.  
	  TODO: more input variations!


2007-10-14	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-router-01-02:
	  No source revision, more bit-router tests.  


	* HACKT-00-01-04-main-00-81-85-router-01-01:
	  No source revision intended on this branch, which is meant for
		developing a set of bitrouter CHP tests and benchmarks
		for thesis-related work.  Don't want to perturb trunk
		until some new testing infrastructure is better tested.  
	  New tests and CHP sources in test/chpsim[/testlib].  


2007-10-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-85-merged-channel-03-05:
	  Branch merge.  Summary:
	  Enabled shared channel notation !! and ??to explicitly declare
		when a channel is allowed to be connected to multiple
		consumers/producers.  However, it is still the user's