@@ -1,0 +1,4 @@
+Writing simulation trace to "quad-bitrouter-mmss-test-01.chpsimtrace".
+running (traced) ... 
+time: 2492
+done. 
