@@ -1,0 +1,4 @@
+Writing simulation trace to "quad-bitrouter-mmss-test-02.chpsimtrace".
+running (traced) ... 
+time: 8892
+done. 
