@@ -1,0 +1,4 @@
+Writing simulation trace to "quad-bitrouter-ssmm-test-01.chpsimtrace".
+running (traced) ... 
+time: 1371
+done. 
