@@ -1,0 +1,11 @@
+# "quad-bitrouter-ssmm-test-02-trace.chpsimrc"
+#	$Id: quad-bitrouter-ssmm-test-02-trace.chpsimrc,v 1.1.2.1 2007/10/20 21:14:10 fang Exp $
+# @haco@ quad-bitrouter-ssmm-test-02.haco-a
+# @module@ -fno-ack-loaded-fns -L../../lib -lstdchpfn
+# @deps@ ../../lib/stdchpfn.la
+
+# timing after
+trace quad-bitrouter-ssmm-test-02.chpsimtrace
+source bitrouter-test-template.chpsimrc
+trace-close
+
