@@ -1,0 +1,4 @@
+Writing simulation trace to "quad-bitrouter-ssmm-test-02.chpsimtrace".
+running (traced) ... 
+time: 7771
+done. 
