@@ -1,5 +1,5 @@
 # "test/chpsim/testlib/Makefile.am"
-#	$Id: Makefile.am,v 1.11.2.2 2007/10/15 02:48:17 fang Exp $
+#	$Id: Makefile.am,v 1.11.2.3 2007/10/20 21:14:18 fang Exp $
 # Test auto-Makefile for chpsim.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -25,7 +25,8 @@ HACKT_PARSE_TEST_PASSES = \
 	void-sink void-source void-buf \
 	round-robin round-robin-test \
 	bitrouter bitrouter-dec \
-	bitrouter-env bitrouter-test
+	bitrouter-env bitrouter-test \
+	quad-bitrouter
 
 HACKT_CREATE_TEST_PASSES = \
 	bool-copy-test \
